init liste des circuits

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,13 @@
 {
   "home": {
     "title": "Tourizm"
+  },
+  "tour": {
+    "table": {
+      "name": "Nom",
+      "description": "Description",
+      "duration": "Durée",
+      "steps": "Nombre d'étapes"
+    }
   }
 }
