intégration bootstrap création liste des circuits init modale de création d'un circuit

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,11 +3,21 @@
     "title": "Tourizm"
   },
   "tour": {
+    "title": "Liste des circuits",
+    "add": "Nouveau circuit",
     "table": {
       "name": "Nom",
       "description": "Description",
       "duration": "Durée",
-      "steps": "Nombre d'étapes"
+      "steps": "Nombre d'étapes",
+      "actions": "Actions",
+      "tooltip": {
+        "update": "Modifier",
+        "delete": "supprimer"
+      }
+    },
+    "create": {
+      "title": "Nouveau circuit"
     }
   }
 }
