modale de création création d'un circuit

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -17,7 +17,12 @@
       }
     },
     "create": {
-      "title": "Nouveau circuit"
+      "title": "Nouveau circuit",
+      "name": "Nom",
+      "desc": "Description",
+      "duration": "Durée",
+      "close": "Fermer",
+      "submit": "Valider"
     }
   }
 }
