--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,7 +7,8 @@
     "tooltip": {
       "update": "Modifier",
       "delete": "supprimer"
-    }
+    },
+    "error": "Erreur"
   },
   "home": {
     "title": "Tourizm"
